src/test/ui/issues/issue-26930.stderr
error: compilation successful
  --> $DIR/issue-26930.rs:10:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

